@@ -9,17 +9,12 @@ requires "perl" => "5.010";
 requires "strict" => "0";
 requires "warnings" => "0";
 
-on 'build' => sub {
-  requires "Module::Build" => "0.28";
-};
-
 on 'test' => sub {
   requires "perl" => "5.010";
 };
 
 on 'configure' => sub {
   requires "ExtUtils::MakeMaker" => "0";
-  requires "Module::Build" => "0.28";
   requires "perl" => "5.010";
 };
 
