@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-OALDERS
 
 {{$NEXT}}
+    - remove usage of [ModuleBuild].
 
 0.000003  2016-07-22 18:44:36-04:00 America/Toronto
     - Copy Makefile.PL from build.
